<resources>
    <string name="app_name">Guessy</string>
    <string name="hintRating">Rating</string>
    <string name="hintBoardGame">Game Board</string>
    <string name="hintKnowledge">Knowledge</string>
    <string name="hintProfile">Profile</string>
    <string name="hintScore">Score</string>
    <string name="hintExit">Exit</string>
    <string name="title_activity_test_tab">testTab</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="mitos">Mitos</string>
    <string name="fakta">Fakta</string>
    <string name="title_activity_knowledge">KnowledgeActivity</string>
    <string name="artikel">Menstruasi adalah proses keluarnya darah dari Miss V akibat siklus bulanan alami yang dialami wanita. Menstruasi diawali dengan peningkatan hormon FSH (follicle stimulating hormone) yang berfungsi mematangkan sel telur (ovum). Kemudian terjadi peningkatan hormon LH (luteinizing hormone) dan terjadilah proses pembuahan (ovulasi). Selama proses pematangan sel telur, terjadi pematangan rahim yang dibantu oleh hormon estrogen sehingga dinding rahim menebal. Setelah menebal dan terjadi ovulasi, hormon progesteron meningkat dan dinding rahim siap dibuahi. Jika tidak terjadi proses pembuahan, dinding rahim akan luruh dan terjadi menstruasi.   Sebutan darah kotor saat menstruasi tidak tepat.</string>
    <string name="artikel2">Tetap Beramal yang Berhubungan dengan Sesama Manusia  Melakukan kerja-kerja rumah Melakukan keutamaan berbakti kepada orang tua Perbanyak infaq dan sedekah Melakukan khidmat masyarakat Melakukan perbincangan ilmiah Menjalankan kerja-kerja dakwah Belajar dan bekerja dengan sabar dan tekun untuk menjalankan cara menjadi orang sukses menurut Al Qur’an Menjalin dan mempereratkan tali silaturahim Melafazkan ucapan takbir ketika hari raya</string>
    <string name="artikel3">Mereka bertanya kepadamu tentang haidh. Katakanlah: “Haidh itu adalah suatu kotoran”. Oleh sebab itu hendaklah kamu menjauhkan diri dari wanita di waktu haidh; dan janganlah kamu mendekati mereka, sebelum merekasuci. Apabila mereka telah suci, maka campurilah mereka itu di tempat yang diperintahkan Allah kepadamu. Sesungguhnya Allah menyukai orang-orang yang bertaubat dan menyukai orang-orang yang mensucikan diri (Al Baqarah: 222)</string>
    <string name="fakta1">Ini termasuk salah satu fakta tentang menstruasi. Jika kamu sedang mengalami stres, maka siklus menstruasimu juga akan berubah. Stres bisa berupa rasa cemas berlebihan dan gelisah yang akan membuat siklus menstruasimu datang lebih cepat atau lambat.</string>
    <string name="fakta2">Hal ini memang benar karena pada saat haid, cewek mengalami perubahan hormon. Hormon tersebut berpangaruh pada fisik dan psikis cewek. Sehingga akan muncul perasaan-perasaan yang gak karuan dan pegal atau sakit pada tubuh cewek saat akan haid biasa disebut PMS (Premenstrual Syndrome).</string>
    <string name="fakta3">Memang benar. Nafsu makan saat haid jadi meningkat karena perubahan hormon di dalam tubuh. Cewek juga membutuhkan 110 - 500 kalori saat menjelang masa menstruasi. Inilah kenapa rasanya jadi pengen makan terus.</string>
    <string name="fakta4">Saat kamu merasa lemas selama haid, mungkin kamu berpikir bahwa itu karena kamu kekurangan darah. Wajar, kan kamu sedang “membuang darah”. Tapi sebenarnya ini nggak ada hubungannya lho. Pertama, karena darah yang kamu buang adalah darah kotor, yang nggak dibutuhkan oleh tubuh. Kedua, Darah yang kamu keluarkan rata-rata hanya 35ml/hari atau sekitar 3-6 sendok makan. Jadi seharusnya itu nggak membuatmu lemas. Kalau kamu sering merasa lemas saat haid, kemungkinan ada faktor lain.</string>
    <string name="fakta5">Menurut dokter spesialis kandungan, mitos makan timun saat haid menyebabkan darah haid tersisa di dinding rahim tidaklah benar. Darah haid tidak akan tersisa di dinding rahim, selesai Anda menstruasi, berarti darah memang sudah bersih.  Proses menstruasi akan sama setiap siklusnya. Dari hari awal sampai maksimal tiga hari itu adalah proses utamanya, dinding rahim bagian dalam meluruh dan banyak jaringan endometrium yang luruh.  Endometrium yang banyak memiliki jaringan darah ini menjadi penyebab mengapa tiga hari pertama menstruasi darah yang keluar menjadi kehitaman. Tapi dinding rahim ini lama-lama bersih karena terjadi penutupan sampai hari ke tujuh, hanya tinggal flek  sampai akhirnya bersih.  Jadi, hal yang wajar jika pada awal menstruasi darah yang keluar tidak berwarna merah. Yang perlu diingat adalah bahwa pada saat proses pembersihan, wajar pula jika masih ada beberapa darah yang masih menetes berupa flek. Pada akhirnya beberapa hari kemudian saluran pembuluh darah akan menutup sempurna.</string>
    <string name="mitos1">Tidak ada hubungan antara makan timun dengan menstruasi. Makan timun juga tidak akan memberikan dampak yang berarti terhadap menstruasi Anda. Hal itu merupakan mitos yang beredar di masyarakat Indonesia.  Jika Anda suka makan timun, silakan makan meskipun sedang menstruasi atau baru selesai menstruasi karena hal itu sangatlah aman.</string>
    <string name="mitos2">Ini cuma mitos aja ya. Jadi gak perlu khawatir kalau kalian minum air es waktu menstruasi. Darah haid kalian gak akan membeku. Dinding rahim juga gak akan mengeras seperti yang kalian pernah dengar.</string>
    <string name="mitos3">Konon katanya saat kamu datang bulan, pori-pori kulit kepalamu terbuka lebar. Sehingga kalau kamu keramas nanti akan menyebabkan sakit kepala. Sampai sekarang nggak ada penelitian yang mendukung pernyataan ini. Jadi kamu boleh-boleh aja keramas. Lagian nggak kebayang juga kan kalau kamu nahan keramas selama seminggu.</string>
    <string name="mitos4">Kamu dianjurkan konsumsi makanan bergizi seimbang secara rutin saat menstruasi, termasuk buah nanas. Justru buah nanas mengandung banyak vitamin C yang baik untuk kesehatan dan tidak berbahaya bila dikonsumsi saat menstruasi.</string>
    <string name="mitos5">Memotong kuku dan rambut tidak ada hubungan dengan menstruasi. Mengecat rambut juga tidak dilarang selama menstruasi.</string>
</resources>
