<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainMenuActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_weight="2">

        <!-- Menampilakn Pesan "Welcome" kepada Player-->
        <TextView
            android:id="@+id/welcome_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView6"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/fredoka_one_regular"
            android:gravity="center"
            android:text="username"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <!-- Menampilkan Nama Player yangs sedang main -->
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="41dp"
            android:fontFamily="@font/scada_regular"
            android:gravity="center"
            android:text="Welcome"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:columnCount="2"
        android:rowCount="2">

        <!-- Menampilkan Tombol navigasi Untuk Menu GAME -->
        <LinearLayout
            android:id="@+id/gameBoard"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/rounded"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">
            <!--
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/board" />
            -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/fredoka_one_regular"
                android:text="@string/hintBoardGame"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>

        <!-- Menampilkan Tombol navigasi Untuk Menu KNOWLEDGE -->
        <LinearLayout
            android:id="@+id/knowledge"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/rounded"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">
            <!--
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/hintKnowledge"
                android:src="@drawable/knowledge" />
            -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/fredoka_one_regular"
                android:text="@string/hintKnowledge"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>

        <!--row 3-->

        <!-- Menampilkan Tombol navigasi Untuk Menu RATING -->
        <LinearLayout
            android:id="@+id/rating"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/rounded"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">
            <!--
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/rating" />
            -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/fredoka_one_regular"
                android:text="@string/hintRating"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />


        </LinearLayout>

        <!-- Menampilkan Tombol navigasi Untuk Menu SCORE -->
        <LinearLayout
            android:id="@+id/score"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/rounded"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">
            <!--
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/hintScore"
                android:src="@drawable/score" />
            -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/fredoka_one_regular"
                android:text="@string/hintScore"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>

        <!-- row 2 -->

    </GridLayout>

    <!-- Menampilkan Tombol navigasi Untuk Keluar dari Aplikasi -->
    <LinearLayout
        android:id="@+id/exit"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="16dp">
        <!--
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:contentDescription="@string/hintExit"
            android:src="@drawable/close" />
        -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/fredoka_one_regular"
            android:text="@string/hintExit"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
