<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".PemahamanActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/fredoka_one_regular"
        android:padding="30dp"
        android:text="Pemahaman dari Menstruasi"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <ScrollView
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/images" />

            <TextView
                android:id="@+id/judulId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imageView2"
                android:fontFamily="@font/scada_bold"
                android:text="Apa yang kamu ketahui tentang Mens?"
                android:textSize="25dp" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"
                android:textAlignment="viewStart"
                android:layout_toRightOf="@id/imageView2"
                android:fontFamily="@font/scada_regular"
                android:text="@string/artikel"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/download" />

            <TextView
                android:id="@+id/judulId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imageView2"
                android:fontFamily="@font/scada_bold"
                android:text="Beberapa Adab Saat Sedang Haid"
                android:textSize="25dp" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"
                android:textAlignment="viewStart"
                android:layout_toRightOf="@id/imageView2"
                android:fontFamily="@font/scada_regular"
                android:text="@string/artikel2"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/muslimah" />

            <TextView
                android:id="@+id/judulId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imageView2"
                android:fontFamily="@font/scada_bold"
                android:text="Dalil tentang Haid di Alquran"
                android:textSize="25dp" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"
                android:textAlignment="viewStart"
                android:layout_toRightOf="@id/imageView2"
                android:fontFamily="@font/scada_regular"
                android:text="@string/artikel3"
                android:textSize="13sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>